# local-e2e

./: .flake8  .gitignore  README.md  backlog_ideas.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/maps/: poland_regions.json
configs/: gus_metrics.json
configs/dev/: settings.lan.template.json  settings.localhost.template.json  settings_template.json
configs/prod/: settings.lan.template.json  settings.localhost.template.json  settings_template.json
docs/: developer_proposal.py  pbi_advanced_measures.md  project_history.csv  report_link.txt
docs/backlog_output/: 20260219_1203_prioritized_backlog.md  20260219_1242_backlog.md  20260219_1316_backlog.md  20260219_1411_backlog.md  20260219_1424_backlog.md  20260219_1433_backlog.md  20260219_1501_backlog.md
docs/diagrams/: agent_phase1_backlog.mmd  agent_phase2_developer.mmd  agent_workflow.mmd  architecture.mmd  data_model.mmd
docs/generated_code/: feat_implement_schema_validation_in.py
dosc/: pbi_advanced_measures.md
exploration/: checklist.txt  debug.structure.py
exploration/debug/: check_data_availability.py  check_poland_level_availability.py  debug_api_structure.py  debug_local_write.py  debug_spark_write.py  debug_write_to_azurite.py  inspect_raw_opolskie.py
exploration/tools/: find_gus_id.py  (+3 more)
local_e2e.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: Polish_Economic_Analysis.pbip
scripts/: clean_code.ps1  clean_staging.ps1  run_etl_dev.ps1  run_etl_prod.ps1  start_all.ps1  stop_all.ps1
tests/: test_orchestrator.py  test_transformer.py
(+132 files in other folders)
